--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,9 +9,17 @@ checkeye.api.url=https://api-us.faceplusplus.com/facepp/v3/face/analyze
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=400MB
 
-spring.datasource.url = jdbc:mysql://localhost:3306/skinseoulution
-spring.datasource.username=jan
-spring.datasource.password=janjan
+spring.datasource.url=jdbc:${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+
+
+# server.port =8080
+# spring.datasource.url =jdbc:mysql://localhost:3306/skinseoulution?allowPublicKeyRetrieval=true
+# spring.datasource.username=jan
+# spring.datasource.password=janjan
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
