updated environment variables

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 detectface.api.url=https://api-us.faceplusplus.com/facepp/v3/detect
-detectface.api.secretkeys=jC1fZZ_jAPcYL7Iq0lQryWu20KLYudir
-detectFace.api.key=GijJ8ZlHOePJ3JvkstOphTkLTdwLiDEI
+
+# new
+detectface.api.secretkeys=${SECRETKEYS}
+detectFace.api.key=${KEYS}
 
 analyzeface.api.url=https://api-us.faceplusplus.com/facepp/v1/skinanalyze
 checkeye.api.url=https://api-us.faceplusplus.com/facepp/v3/face/analyze
@@ -9,21 +11,15 @@ checkeye.api.url=https://api-us.faceplusplus.com/facepp/v3/face/analyze
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=400MB
 
+# for deployment
 spring.datasource.url=jdbc:${MYSQL_URL}
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
 
 
-# server.port =8080
-# spring.datasource.url =jdbc:mysql://localhost:3306/skinseoulution?allowPublicKeyRetrieval=true
-# spring.datasource.username=jan
-# spring.datasource.password=janjan
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hoojyalen
-spring.mail.password=bggnnlhoyhluefef
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_APIPW}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
